--- a/OB_Starter_Code.ipynb
+++ b/OB_Starter_Code.ipynb
@@ -5,7 +5,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib as pltpy\n"
+   ]
   }
  ],
  "metadata": {
