--- a/OB_Starter_Code.ipynb
+++ b/OB_Starter_Code.ipynb
@@ -5,14 +5,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "test = 1"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:PythonData] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-PythonData-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
