--- a/OB_Starter_Code.ipynb
+++ b/OB_Starter_Code.ipynb
@@ -15,8 +15,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
-    "import matplotlib as pltpy\n"
+    "from scipy.stats import linregress\n",
+    "import numpy as np\n"
    ]
   }
  ],
