--- a/OB_Starter_Code.ipynb
+++ b/OB_Starter_Code.ipynb
@@ -2,17 +2,487 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obgyn_by_county = \"obgyn_by_county.csv\"\n",
+    "underlying_cause = \"underlying_cause.csv\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obgyn_by_county_df = pd.read_csv(obgyn_by_county, encoding=\"ISO-8859-1\")\n",
+    "underlying_cause_df = pd.read_csv(underlying_cause\n",
+    "                                  , encoding=\"ISO-8859-1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>County Name</th>\n",
+       "      <th>Providers Count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ADAMS</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ALLEN</td>\n",
+       "      <td>182</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>BARTHOLOMEW</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>BOONE</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>CASS</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   County Name  Providers Count\n",
+       "0        ADAMS                5\n",
+       "1        ALLEN              182\n",
+       "2  BARTHOLOMEW               13\n",
+       "3        BOONE                8\n",
+       "4         CASS                6"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obgyn_by_county_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Providers Count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>68.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>28.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>74.668496</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>4.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>9.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>22.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>571.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Providers Count\n",
+       "count        68.000000\n",
+       "mean         28.750000\n",
+       "std          74.668496\n",
+       "min           1.000000\n",
+       "25%           4.000000\n",
+       "50%           9.000000\n",
+       "75%          22.000000\n",
+       "max         571.000000"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obgyn_by_county_df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CNTY</th>\n",
+       "      <th>CHILD_DEATH_YR</th>\n",
+       "      <th>UNDERLYING_COD</th>\n",
+       "      <th>CNT_BY_UNDERLYING_COD</th>\n",
+       "      <th>CNTY_YR_DEATH_TOTAL</th>\n",
+       "      <th>PCT_CNTY_YR_TOTAL</th>\n",
+       "      <th>CHILD_DEATH_CNTY_POP</th>\n",
+       "      <th>CNTY_YR_DEATH_TOTAL_PER_10000_CNTY_RES</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ADAMS</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>Other specified noninfective disorders of lymp...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>34387</td>\n",
+       "      <td>1.16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ADAMS</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>Unspecified pulmonary hemorrhage originating i...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>34387</td>\n",
+       "      <td>1.16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ADAMS</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>Congenital malformation of the heart, unspecified</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>34387</td>\n",
+       "      <td>1.16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ADAMS</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>Polycystic kidney, unspecified</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>34387</td>\n",
+       "      <td>1.16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ADAMS</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>Primary atelectasis of newborn</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>34384</td>\n",
+       "      <td>1.45</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    CNTY  CHILD_DEATH_YR                                     UNDERLYING_COD  \\\n",
+       "0  ADAMS            2010  Other specified noninfective disorders of lymp...   \n",
+       "1  ADAMS            2010  Unspecified pulmonary hemorrhage originating i...   \n",
+       "2  ADAMS            2010  Congenital malformation of the heart, unspecified   \n",
+       "3  ADAMS            2010                     Polycystic kidney, unspecified   \n",
+       "4  ADAMS            2011                     Primary atelectasis of newborn   \n",
+       "\n",
+       "   CNT_BY_UNDERLYING_COD  CNTY_YR_DEATH_TOTAL  PCT_CNTY_YR_TOTAL  \\\n",
+       "0                      1                    4               25.0   \n",
+       "1                      1                    4               25.0   \n",
+       "2                      1                    4               25.0   \n",
+       "3                      1                    4               25.0   \n",
+       "4                      1                    5               20.0   \n",
+       "\n",
+       "   CHILD_DEATH_CNTY_POP  CNTY_YR_DEATH_TOTAL_PER_10000_CNTY_RES  \n",
+       "0                 34387                                    1.16  \n",
+       "1                 34387                                    1.16  \n",
+       "2                 34387                                    1.16  \n",
+       "3                 34387                                    1.16  \n",
+       "4                 34384                                    1.45  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "underlying_cause_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CHILD_DEATH_YR</th>\n",
+       "      <th>CNT_BY_UNDERLYING_COD</th>\n",
+       "      <th>CNTY_YR_DEATH_TOTAL</th>\n",
+       "      <th>PCT_CNTY_YR_TOTAL</th>\n",
+       "      <th>CHILD_DEATH_CNTY_POP</th>\n",
+       "      <th>CNTY_YR_DEATH_TOTAL_PER_10000_CNTY_RES</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>2393.000000</td>\n",
+       "      <td>2393.000000</td>\n",
+       "      <td>2393.000000</td>\n",
+       "      <td>2393.000000</td>\n",
+       "      <td>2393.000000</td>\n",
+       "      <td>2393.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>2014.029252</td>\n",
+       "      <td>1.193481</td>\n",
+       "      <td>16.910990</td>\n",
+       "      <td>24.713725</td>\n",
+       "      <td>272709.632679</td>\n",
+       "      <td>0.661463</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>2.531239</td>\n",
+       "      <td>0.717501</td>\n",
+       "      <td>21.224887</td>\n",
+       "      <td>26.714584</td>\n",
+       "      <td>308761.865396</td>\n",
+       "      <td>0.340800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>2010.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.388800</td>\n",
+       "      <td>8166.000000</td>\n",
+       "      <td>0.050000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>2012.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>6.250000</td>\n",
+       "      <td>44013.000000</td>\n",
+       "      <td>0.440000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>2014.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>16.666600</td>\n",
+       "      <td>143535.000000</td>\n",
+       "      <td>0.620000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>2016.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>19.000000</td>\n",
+       "      <td>33.333300</td>\n",
+       "      <td>363265.000000</td>\n",
+       "      <td>0.770000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>2018.000000</td>\n",
+       "      <td>11.000000</td>\n",
+       "      <td>72.000000</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>941229.000000</td>\n",
+       "      <td>3.150000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       CHILD_DEATH_YR  CNT_BY_UNDERLYING_COD  CNTY_YR_DEATH_TOTAL  \\\n",
+       "count     2393.000000            2393.000000          2393.000000   \n",
+       "mean      2014.029252               1.193481            16.910990   \n",
+       "std          2.531239               0.717501            21.224887   \n",
+       "min       2010.000000               1.000000             1.000000   \n",
+       "25%       2012.000000               1.000000             3.000000   \n",
+       "50%       2014.000000               1.000000             7.000000   \n",
+       "75%       2016.000000               1.000000            19.000000   \n",
+       "max       2018.000000              11.000000            72.000000   \n",
+       "\n",
+       "       PCT_CNTY_YR_TOTAL  CHILD_DEATH_CNTY_POP  \\\n",
+       "count        2393.000000           2393.000000   \n",
+       "mean           24.713725         272709.632679   \n",
+       "std            26.714584         308761.865396   \n",
+       "min             1.388800           8166.000000   \n",
+       "25%             6.250000          44013.000000   \n",
+       "50%            16.666600         143535.000000   \n",
+       "75%            33.333300         363265.000000   \n",
+       "max           100.000000         941229.000000   \n",
+       "\n",
+       "       CNTY_YR_DEATH_TOTAL_PER_10000_CNTY_RES  \n",
+       "count                             2393.000000  \n",
+       "mean                                 0.661463  \n",
+       "std                                  0.340800  \n",
+       "min                                  0.050000  \n",
+       "25%                                  0.440000  \n",
+       "50%                                  0.620000  \n",
+       "75%                                  0.770000  \n",
+       "max                                  3.150000  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "underlying_cause_df.describe()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:PythonData] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-PythonData-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
